--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "biome lint"
   },
   "dependencies": {
+    "@next/swc-win32-x64-msvc": "^16.1.1",
     "accept-language": "^3.0.18",
     "i18next": "^23.12.1",
     "i18next-resources-to-backend": "^1.2.1",
-    "next": "15.2.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-i18next": "^15.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.6.4",
-    "@domin-mnd/config": "^0.0.3",
     "@types/node": "^20",
-    "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "eslint": "9",
+    "eslint-config-next": "16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "trustedDependencies": [
+    "unrs-resolver"
+  ]
 }
